<resources>
    <string name="app_name">OV-App</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Plan your trip</string>
    <string name="fromHint">From…</string>
    <string name="toHint">To…</string>
    <string name="from_to"><![CDATA[From -> To]]></string>
    <string name="favourite_btn">Favourite</string>
    <string name="direction">Direction:</string>
    <string name="platform">Platform:</string>
    <string name="arrival">Arrival:</string>
    <string name="departure">Departure:</string>
    <string name="btn_favourites">Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="colon">:</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
</resources>
